<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos os convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="label_name">nome</string>
    <string name="label_is_present">Presença</string>
    <string name="label_present">Presente</string>
    <string name="label_absent">Ausente</string>
    <string name="save">Salvar</string>
    <string name="delete_guest_title">Remoção de convidado</string>
    <string name="delete_guest_message">Tem certeza que deseja deletar o convidado?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="success_insertion">Inserção do convidado com sucesso</string>
    <string name="failed">Falha</string>
    <string name="success_updating">Atualização do convidado com sucesso</string>
</resources>